--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --blue-100: #79A3E2;
   --blue-200: #4F86D8;
   --blue-300: #23549F;
-  --blue-400: #11284B;
+  --blue-400: #2E274F;
   --blue-500: #050B15;
   --white-100: #F7F9FD;
   --white-200: #EBEFF9;
