--- a/src/Components/Layouts/NavBar/style.module.css
+++ b/src/Components/Layouts/NavBar/style.module.css
@@ -10,6 +10,8 @@
     border-right: 1px solid var(--white-400);
     border-radius: 0 3em 3em 0;
     background-color: var(--white-100);
+    box-shadow: 0 0 198px 4px rgba(41, 107, 178, 0.10);
+    z-index: 1;
 }
 
 .container a {
