--- a/src/Components/Layouts/Container/style.module.css
+++ b/src/Components/Layouts/Container/style.module.css
@@ -1,15 +1,21 @@
 .container {
-    box-sizing: border-box;
-    width: 100%;
-    /* max-width: 1440px; */
-    height: 100vh;
-    margin: 0 auto;
-    display: flex;
-    background-color: var(--white-100);
+  box-sizing: border-box;
+  width: 100%;
+  /* max-width: 1440px; */
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  background-color: var(--white-100);
 }
 
 .column {
-    flex-direction: column;
-    gap: 1.5em;
-    padding: 3em 4em;
+  flex-direction: column;
+  gap: 1.5em;
+  padding: 3em 4em;
+}
+
+.columnSpace {
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 3em 4em;
 }
