--- a/src/Components/Layouts/DividerContainer/style.module.css
+++ b/src/Components/Layouts/DividerContainer/style.module.css
@@ -9,3 +9,12 @@
     width: 100%;
     height: 100%;
 }
+
+.center {
+    justify-content: center;
+}
+
+.column {
+    flex-direction: column;
+    gap: 1.5em;
+}
