Construindo a página de favoritos

--- a/src/Components/Ui/Cards/style.module.css
+++ b/src/Components/Ui/Cards/style.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
     gap: 1.5em;
