--- a/src/Components/Layouts/Container/style.module.css
+++ b/src/Components/Layouts/Container/style.module.css
@@ -1,7 +1,6 @@
 .container {
   box-sizing: border-box;
   width: 100%;
-  /* max-width: 1440px; */
   height: 100vh;
   margin: 0 auto;
   display: flex;
@@ -18,4 +17,9 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 3em 4em;
+}
+
+.center {
+  justify-content: center;
+  align-items: center;
 }
