Finalizando tela do login e criando tela de registro

--- a/src/Components/Layouts/DividerContainer/style.module.css
+++ b/src/Components/Layouts/DividerContainer/style.module.css
@@ -23,3 +23,10 @@
     flex-direction: column;
     gap: 1em;
 }
+
+.columnCenter {
+    flex-direction: column;
+    gap: 1.5em;
+    align-items: center;
+    justify-content: center;
+}
