--- a/src/Components/Ui/Card/style.module.css
+++ b/src/Components/Ui/Card/style.module.css
@@ -48,7 +48,7 @@
     flex-grow: 1;
 }
 
-.infoPet p {
+.infoPet p, .buttons .a {
     padding: 0;
     margin: 0;
     color: var(--blue-500);
@@ -56,6 +56,12 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.buttons .a {
+    font-size: 1em;
+    color: var(--blue-300);
+    font-weight: 600;
 }
 
 .infoPet p span {
