--- a/src/Components/Ui/Card/style.module.css
+++ b/src/Components/Ui/Card/style.module.css
@@ -102,6 +102,7 @@
     justify-content: center;
     padding: 0.5em;
     background: var(--blue-400);
+    border: 1px solid var(--blue-400);
     border-radius: 4px;
     color: var(--white-100);
     cursor: pointer;
