--- a/src/Components/Layouts/NavBar/style.module.css
+++ b/src/Components/Layouts/NavBar/style.module.css
@@ -17,15 +17,20 @@
 .container a {
     padding: 0px 0.75em;
     display: flex;
-    align-items: center;
     align-self: stretch;
-    gap: 0.75em;
     color: var(--blue-300);
     text-decoration: none;
     font-size: 1.125em;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5em;
+}
+
+.container a span {
+    display: flex;
+    align-items: center;
+    gap: 0.75em;
+    width: 100%;
 }
 
 .navLinks, .account {
