--- a/src/Components/Ui/Profile/style.module.css
+++ b/src/Components/Ui/Profile/style.module.css
@@ -8,6 +8,7 @@
 .image {
     width: 120px;
     height: 120px;
+    border: 2px solid var(--yellow-300);
     border-radius: 100%;
     background-position: center;
     background-size: cover;
