Utilizando o react hook form e zod para validar os inputs

--- a/src/Components/Pages/Styles/Input.module.css
+++ b/src/Components/Pages/Styles/Input.module.css
@@ -23,3 +23,13 @@
   line-height: 1em;
   background: none;
 }
+
+.Form {
+  width: 100%;
+}
+
+.inputError {
+color: var(--red);
+font-size: 0.8em;
+margin: 0.5em;
+}
